# StarCitizenOrg-Discord-Bot

./: .containerignore  .flake8  .gitignore  .replit  README.md  main.py  pyproject.toml
.github/workflows/: push_new_version.yml  verify_commit.yml
config/: ConfigFile.ini
image/: brvns.Containerfile
src/: BrvnsClient.py  __init__.py  brvns_bot.py  brvns_bot_API.py  brvns_bot_api.py  brvns_bot_logic.py  brvns_client.py  brvns_client_API.py  brvns_config.py  brvns_resources.py
src/cogs/: __init__.py  background_tasks.py  slash_admin_only.py  slash_brvns.py  slash_general.py
src/logic/: __init__.py  database_connection.py  resources_logic.py  rsi_lookup.py  slash_logic.py
src/resources/: resources.ini  strings.ini  test.ini
src/views/: server_setup_views.py
test/: hello_world_test.py  resources_logic_test.py  signup_string_test.py  slash_logic_test.py
test/resources/: strings.ini
