[tool.poetry]
name = "brvns-discord"
version = "0.1.0"
description = "A Discord bot for the Blue Ravens Org."
authors = [
    "David \"Ziggiyzoo\" <you@example.com>",
    "Renegade-Master <renegade.master.dev@protonmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.7.2,<=3.10.99"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
