[tool.poetry]
name = "brvns-discord"
version = "0.1.0"
description = "A Discord bot for the Blue Ravens Org."
authors = [
    "David \"Ziggiyzoo\" <davidkimad@gmail.com>",
    "Renegade-Master <renegade.master.dev@protonmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.8.0,<=3.10.99"
py-cord = "^2.0.0"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
